[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
itertools = "0.11.0"
advent-of-code-2023-macro = { git = "https://github.com/jchevertonwynne/advent-of-code-2023-macro", branch = "main" }
nom = "7.1.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "days"
harness = false
