[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
arrayvec = "0.7.4"
bstr = "1.8.0"
bumpalo = "3.14.0"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
fxhash = "0.2.1"
itertools = "0.11.0"
nom = "7.1.3"
num = "0.4.1"
object-pool = "0.5.4"
reqwest = { version = "0.11.22", features = ["blocking"] }
ring-algorithm = "0.7.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "days"
harness = false
